nohup.out
183.156.55.117:54885 - - [25/Nov/2015 09:08:15] "HTTP/1.1 GET /" - 200 OK
183.156.55.117:54890 - - [25/Nov/2015 09:08:43] "HTTP/1.1 POST /command" - 404 Not Found
183.156.55.117:54890 - - [25/Nov/2015 09:08:45] "HTTP/1.1 POST /command" - 404 Not Found
  File "code.py", line 19
    if commandName=='ls'
                       ^
SyntaxError: invalid syntax
115.200.62.5:38143 - - [25/Nov/2015 22:57:53] "HTTP/1.1 GET /update" - 200 OK
115.200.62.5:38752 - - [25/Nov/2015 23:45:39] "HTTP/1.1 GET /" - 200 OK
115.200.62.5:38752 - - [25/Nov/2015 23:45:39] "HTTP/1.1 GET /favicon.ico" - 404 Not Found
115.200.62.5:38667 - - [25/Nov/2015 23:54:10] "HTTP/1.1 GET /" - 200 OK
115.200.62.5:37457 - - [26/Nov/2015 00:07:44] "HTTP/1.1 GET /" - 200 OK
115.200.62.5:37532 - - [26/Nov/2015 00:08:10] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:5268 - - [26/Nov/2015 00:27:53] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:5812 - - [26/Nov/2015 00:27:53] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:5834 - - [26/Nov/2015 00:27:56] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:6195 - - [26/Nov/2015 00:27:57] "HTTP/1.1 GET " - 404 Not Found
121.42.0.31:24887 - - [26/Nov/2015 01:02:22] "HTTP/1.1 GET /" - 200 OK
223.95.73.218:50516 - - [26/Nov/2015 02:55:56] "HTTP/1.1 GET " - 404 Not Found
121.42.0.30:16269 - - [26/Nov/2015 03:36:45] "HTTP/1.1 GET /" - 200 OK
121.42.0.37:61996 - - [26/Nov/2015 04:00:48] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:52408 - - [26/Nov/2015 04:32:37] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:52417 - - [26/Nov/2015 04:32:37] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:52421 - - [26/Nov/2015 04:32:38] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:52426 - - [26/Nov/2015 04:32:38] "HTTP/1.1 GET " - 404 Not Found
95.25.115.48:41255 - - [26/Nov/2015 05:10:59] "HTTP/1.1 GET favicon.ico" - 404 Not Found
95.25.115.48:41255 - - [26/Nov/2015 05:10:59] "HTTP/1.1 POST favicon.ico" - 404 Not Found
95.25.115.48:42303 - - [26/Nov/2015 05:11:02] "HTTP/1.1 GET favicon.ico" - 404 Not Found
95.25.115.48:51221 - - [26/Nov/2015 05:11:32] "HTTP/1.1 POST favicon.ico" - 404 Not Found
121.42.0.30:57114 - - [26/Nov/2015 06:03:47] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:8722 - - [26/Nov/2015 08:35:19] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:8741 - - [26/Nov/2015 08:35:24] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9320 - - [26/Nov/2015 08:35:25] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9353 - - [26/Nov/2015 08:35:25] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:60166 - - [26/Nov/2015 12:36:44] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:60182 - - [26/Nov/2015 12:36:47] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:60546 - - [26/Nov/2015 12:36:50] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:60878 - - [26/Nov/2015 12:36:50] "HTTP/1.1 GET " - 404 Not Found
121.40.71.196:50094 - - [26/Nov/2015 12:49:20] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26431 - - [26/Nov/2015 16:41:34] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26447 - - [26/Nov/2015 16:41:34] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26467 - - [26/Nov/2015 16:41:34] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26491 - - [26/Nov/2015 16:41:35] "HTTP/1.1 GET " - 404 Not Found
121.42.0.31:7952 - - [26/Nov/2015 18:24:08] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:9787 - - [26/Nov/2015 20:45:09] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9799 - - [26/Nov/2015 20:45:09] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9816 - - [26/Nov/2015 20:45:09] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9834 - - [26/Nov/2015 20:45:09] "HTTP/1.1 GET " - 404 Not Found
121.42.0.14:42337 - - [26/Nov/2015 22:02:54] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:9088 - - [27/Nov/2015 00:53:50] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9092 - - [27/Nov/2015 00:53:50] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9104 - - [27/Nov/2015 00:53:50] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9123 - - [27/Nov/2015 00:53:50] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:8940 - - [27/Nov/2015 00:53:52] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9285 - - [27/Nov/2015 00:53:52] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9320 - - [27/Nov/2015 00:53:52] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:9359 - - [27/Nov/2015 00:53:52] "HTTP/1.1 GET " - 404 Not Found
121.42.0.17:48806 - - [27/Nov/2015 01:04:22] "HTTP/1.1 GET /" - 200 OK
121.42.0.37:18840 - - [27/Nov/2015 04:03:05] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:58716 - - [27/Nov/2015 04:59:11] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:58734 - - [27/Nov/2015 04:59:11] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:59221 - - [27/Nov/2015 04:59:20] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:61157 - - [27/Nov/2015 09:03:35] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:61755 - - [27/Nov/2015 09:03:35] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:61770 - - [27/Nov/2015 09:03:35] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:61789 - - [27/Nov/2015 09:03:35] "HTTP/1.1 GET " - 404 Not Found
94.102.49.210:58953 - - [27/Nov/2015 12:04:40] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26463 - - [27/Nov/2015 13:05:48] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26473 - - [27/Nov/2015 13:05:48] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26484 - - [27/Nov/2015 13:05:48] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:26492 - - [27/Nov/2015 13:05:55] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:16251 - - [27/Nov/2015 17:08:20] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:16692 - - [27/Nov/2015 17:08:20] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:16741 - - [27/Nov/2015 17:08:20] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:16778 - - [27/Nov/2015 17:08:20] "HTTP/1.1 GET " - 404 Not Found
121.42.0.16:4212 - - [27/Nov/2015 20:04:53] "HTTP/1.1 GET /" - 200 OK
61.157.96.80:40790 - - [27/Nov/2015 21:14:11] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:40806 - - [27/Nov/2015 21:14:11] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:40819 - - [27/Nov/2015 21:14:15] "HTTP/1.1 GET " - 404 Not Found
61.157.96.80:41305 - - [27/Nov/2015 21:14:16] "HTTP/1.1 GET " - 404 Not Found
121.42.0.18:50667 - - [27/Nov/2015 23:46:16] "HTTP/1.1 GET /" - 200 OK
183.246.24.150:18552 - - [27/Nov/2015 23:57:44] "HTTP/1.1 GET /" - 200 OK
183.246.24.150:18623 - - [27/Nov/2015 23:58:02] "HTTP/1.1 POST /command" - 200 OK
183.246.24.150:19948 - - [28/Nov/2015 00:01:10] "HTTP/1.1 GET /" - 200 OK
